<resources>
    <string name="app_name">Todo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_todo_list_hint_text">Enter the name of the list</string>
    <string name="new_todo_list_create_list_save_button_text">Save</string>
    <string name="todo_list_add_todo_button_text">Create a To-do List</string>
    <string name="todo_list_add_todo_item_button_text">Add item</string>
    <string name="todo_list_add_todo_item_cancel_button_text">Cancel</string>
    <string name="todo_list_item_save_todo_item_edit">Save todo item edit</string>
    <string name="todo_list_card_view_transition_name">todo_list_card_view</string>
    <string name="todo_list_toolbar_transition_name">todo_list_toolbar_transition_name</string>
    <string name="todo_list_menu_delete_to_do_list">Delete list</string>
    <string name="todo_item_enter_a_new_item">Enter a new item</string>
</resources>
