<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/todo_list_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    cardView:cardBackgroundColor="@color/yellow"
    android:elevation="8dp"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:transitionName="@string/todo_list_card_view_transition_name">
    <android.support.v7.widget.Toolbar
        android:id="@+id/todo_list_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:transitionName="@string/todo_list_toolbar_transition_name">
        <TextView
            android:id="@+id/todo_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/hello_blank_fragment"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:maxLength="17"
            android:typeface="monospace" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/todo_list_card_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="56dp"
        android:padding="8dp">

    </LinearLayout>


</android.support.v7.widget.CardView>