<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/todo_list_add_todo_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/todo_list_add_todo_item_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/new_todo_enter_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/todo_list_add_todo_item_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_todo_item_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/new_todo_list_hint_text"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/new_todo_list_create_todo_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_todo_list_create_list_save_button_text"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/todo_list_items_recycler_view"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"

        app:layout_constraintTop_toBottomOf="@+id/new_todo_enter_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-115dp">

    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>