<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/todo_list_add_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButton"
            android:text="@string/todo_list_add_todo_button_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/todo_lists_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_list_add_todo_button">

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/new_todo_list_bottom_sheet"
        android:layout_width="match_parent"
        android:elevation="8dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:clipToPadding="true"
        android:background="@color/yellow"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_todo_list_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@+id/new_todo_list_create_list_button"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:hint="@string/new_todo_list_hint_text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/new_todo_list_create_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_todo_list_create_list_save_button_text"
                android:theme="@style/PrimaryButton"

                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" />
        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>